# MDE4CPP_CI

./: .gitignore  MDE4CPP_Generator.properties  check_prerequisites.sh
docs/: BUILD_FAILURES_ANALYSIS.md  CHANGES_DOCUMENTATION.md  CROSS_COMPILATION_IMPLEMENTATION.md  DOCKERFILE_IMPROVEMENTS.md  FIXES_STATUS.md  SETUP_FRESH_CLONE.md  SETUP_STATUS.md  WHY_GRADLE_PLUGIN_CHANGES_NEEDED.md
generator/UML4CPP/UML4CPP.generator/src/UML4CPP/generator/main/: Generate.java
generator/UML4CPP/UML4CPP.generator/src/UML4CPP/generator/main/configuration/: generateCMakeFiles.mtl
generator/UML4CPP/UML4CPP.generator/src/UML4CPP/generator/main/helpers/: generalHelper.mtl  keywords.mtl  setGetHelper.mtl
generator/UML4CPP/UML4CPP.generator/src/UML4CPP/generator/main/main_application/: generateMainApplicationCMakeFile.mtl
generator/ecore4CPP/ecore4CPP.generator/src/ecore4CPP/generator/main/: generateApplication.mtl  generateBuildFile.mtl  helper.mtl
generator/ecore4CPP/ecore4CPP.generator/src/ecore4CPP/generator/main/helpers/: keywords.mtl
generator/fUML4CPP/fUML4CPP.generator/src/fUML4CPP/generator/main/: GenerateFUML.java
generator/fUML4CPP/fUML4CPP.generator/src/fUML4CPP/generator/main/build_files/: generateExecutionCMakeFile.mtl
generator/fUML4CPP/fUML4CPP.generator/src/fUML4CPP/generator/main/helpers/: fUMLKeywords.mtl
gradlePlugins/MDE4CPPCompilePlugin/src/tui/sse/mde4cpp/: CommandBuilder.java  GradlePropertyAnalyser.java
src/common/MDE4CPP_PluginAPI/src/: CMakeLists.txt
src/common/cmake/: cmake-toolchain-mingw.cmake
src/common/parser/: build.gradle
src/common/persistence/: CMakeLists.txt  build.gradle
src/common/pluginFramework/src/pluginFramework/: CMakeLists.txt
src/examples/: build.gradle
src/examples/UMLExamples/UMLExample/: build.gradle
src/examples/UMLExamples/UMLExample/src/UMLExample/: CMakeLists.txt
src/examples/benchmarks/UMLBenchmark/src/UMLBenchmark/: CMakeLists.txt
src/examples/benchmarks/ecoreBenchmark/src/ecoreBenchmark/: CMakeLists.txt
src/examples/benchmarks/memoryBenchmarkEcore/src/memoryBenchmarkEcore/: CMakeLists.txt
src/examples/commonExamples/SimpleUML/src/: CMakeLists.txt
src/examples/commonExamples/persistenceExample/src/: CMakeLists.txt
src/examples/commonExamples/pluginFrameworkExample/src/: CMakeLists.txt
src/examples/ecoreExamples/ecoreExample/: build.gradle
src/examples/ecoreExamples/ecoreExample/src/ecoreExample/: CMakeLists.txt
src/examples/oclExamples/oclExample/: build.gradle
src/examples/oclExamples/oclExample/src/: CMakeLists.txt
src/fuml/: build.gradle
src/ocl/oclModel/: build.gradle
src/ocl/oclParser/: CMakeLists.txt
src/pscs/: build.gradle
src/pssm/: build.gradle
src/uml/types/: build.gradle
src/uml/uml/: build.gradle
